<resources>
    <string name="app_name">ProyectoFinal</string>
    <string name="rellenador">Falta Texto</string>
    <string name="cerrar">Cerrar Sesión</string>
    <string name="nombre_usuario">Jorge Ortiz</string>
    <string name="competencias">Administrador, Desarrollador</string>
    <string name="titulo_login">Log In</string>
    <string name="titulo_signup">Crear Cuenta</string>
    <string name="titulo_email">Email</string>
    <string name="titulo_password">Password</string>
    <string name="btn_login">Iniciar Sesión</string>
    <string name="btn_login_google">Iniciar Sesión con Google</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirmar Password</string>
    <string name="ayuda_requerido">Requerido</string>
    <string name="texto_sin_cuenta">¿No tienes cuenta?</string>
    <string name="texto_con_cuenta">¿Ya tienes cuenta?</string>
    <string name="texto_registrarse">Registrarse</string>
    <string name="texto_login">Iniciar Sesión</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_listado">ListadoProductos</string>
    <string name="menu_scan">Scan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_web_client_id">217492763247-6f7i7dudp0qdi9uv6e5v4jdqmlufec49.apps.googleusercontent.com</string>
    <string name="agregar_item">agregar item</string>
    <string name="busqueda_input">Ingresa tu busqueda</string>


</resources>