<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp_Fragment">

    <ImageView
        android:id="@+id/img_signup"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:src="@drawable/crear_cuenta_img"
        app:layout_constraintBottom_toBottomOf="@id/guia1_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guia1_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <TextView
        android:id="@+id/titulo_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_signup"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/guia2_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guia1_signup"
        app:layout_constraintVertical_bias="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guia2_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_signup"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintVertical_chainStyle="spread"
        android:background="@color/gray"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:endIconMode="clear_text"
        app:helperText="@string/ayuda_requerido"
        app:helperTextTextColor="@color/red"
        app:layout_constraintBottom_toTopOf="@+id/password_signup1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guia2_signup"
        app:layout_constraintVertical_bias="0.25"
        app:startIconDrawable="@drawable/baseline_account_circle_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_email_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_signup1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:background="@color/gray"
        android:hint="@string/password"
        android:inputType="textEmailAddress"
        app:endIconMode="password_toggle"
        app:helperText="@string/ayuda_requerido"
        app:helperTextTextColor="@color/red"
        app:layout_constraintTop_toBottomOf="@id/email_signup"
        app:layout_constraintBottom_toTopOf="@+id/password_signup2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/baseline_app_blocking_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_password_signup1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_signup2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:background="@color/gray"
        android:hint="@string/confirm_password"
        android:inputType="textEmailAddress"
        app:endIconMode="password_toggle"
        app:helperText="@string/ayuda_requerido"
        app:helperTextTextColor="@color/red"
        app:layout_constraintTop_toBottomOf="@id/password_signup1"
        app:layout_constraintBottom_toTopOf="@id/guia3_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/baseline_app_blocking_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_password_signup2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guia3_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.80" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/crear_cuenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:backgroundTint="@color/principal"
        android:text="@string/titulo_signup"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/guia4_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guia3_signup"
        app:layout_constraintVertical_bias="0.5"
        app:icon="@drawable/passkey_24dp"
        app:iconGravity="textStart"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guia4_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:color="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guia4_signup"
        app:layout_constraintVertical_bias="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guia5_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_signup" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_con_cuenta"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guia5_signup"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_signup" />

    <TextView
        android:id="@+id/texto_iniciar_sesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_login"
        android:textColor="@color/principal"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="@id/guia5_signup"
        app:layout_constraintTop_toBottomOf="@id/divider_signup" />


</androidx.constraintlayout.widget.ConstraintLayout>