<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Login_Fragment">

    <ImageView
        android:id="@+id/img_principal"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:src="@drawable/img_principal"
        app:layout_constraintBottom_toBottomOf="@id/guia1_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guia1_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40"/>

    <TextView
        android:id="@+id/titulo_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_login"
        app:layout_constraintBottom_toBottomOf="@id/guia2_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guia1_login"
        app:layout_constraintVertical_bias="0.5"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guia2_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45"/>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/email"
        app:helperText="@string/ayuda_requerido"
        app:helperTextTextColor="@color/red"
        android:layout_marginHorizontal="50dp"
        android:inputType="textEmailAddress"
        app:startIconDrawable="@drawable/baseline_account_circle_24"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toBottomOf="@id/guia2_login"
        app:layout_constraintBottom_toTopOf="@id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:background="@color/gray"
        app:layout_constraintVertical_chainStyle="spread"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:id="@+id/input_email"/>

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/password"
        app:helperText="@string/ayuda_requerido"
        app:helperTextTextColor="@color/red"
        android:layout_marginHorizontal="50dp"
        android:inputType="textEmailAddress"
        app:startIconDrawable="@drawable/baseline_app_blocking_24"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintBottom_toTopOf="@id/guia3_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.85"
        android:background="@color/gray"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/input_password"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guia3_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.70" />

    <Button
        android:id="@+id/logear_cuenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_login"
        android:textColor="@color/white"
        android:backgroundTint="@color/principal"
        android:textSize="20sp"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintTop_toBottomOf="@id/guia3_login"
        app:layout_constraintBottom_toTopOf="@id/guia4_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.5"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guia4_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9"/>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:id="@+id/divider_login"
        app:layout_constraintTop_toBottomOf="@id/guia4_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:color="@color/gray"
        app:layout_constraintVertical_bias="0.1"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guia5_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/divider_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintGuide_percent="0.5"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_sin_cuenta"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/divider_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guia5_login"
        app:layout_constraintHorizontal_bias="0.95"
        android:textSize="15sp"
        />

    <TextView
        android:id="@+id/texto_registrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_registrarse"
        android:textColor="@color/principal"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/divider_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/guia5_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        android:textSize="15sp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>